crates/analyzer/tests/snapshots/errors__const_expr.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: expression is not a constant
  ┌─ compile_errors/const_expr.fe:3:33
  │
3 │         let array: Array<i32, { (1, 2) }>
  │                                 ^^^^^^ expression is required to be constant here

error: zero division error
  ┌─ compile_errors/const_expr.fe:6:33
  │
6 │         let array: Array<i32, { 1 / (3 - 3) }>
  │                                 ^^^^^^^^^^^ zero division occurred during constant evaluation


